@@ -63,7 +63,7 @@
      <item>
       <widget class="QComboBox" name="language_filter" >
        <property name="editable" >
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
